--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "vite-project",
+	"name": "customer-support-ai-agent-dashboard",
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
